# bfte

./: .gitignore  CLAUDE.md  CONVENTIONS.md  Cargo.toml  README.design.md  README.md  flake.nix  justfile  justfile-bfte
.config/flakebox/: id
.github/: README.md
.github/workflows/: flakebox-ci.yml
crates/bfte/: Cargo.toml
crates/bfte/src/: lib.rs  logging.rs  main.rs  opts.rs
crates/consensus/: Cargo.toml  DESIGN.md  README.md
crates/consensus-core/: Cargo.toml  README.md
crates/consensus-core/src/: bincode.rs  block.rs  citem.rs  consensus_params.rs  federation_id.rs  lib.rs  module.rs  msg.rs  num_peers.rs  peer.rs  peer_set.rs  signed.rs  timestamp.rs  ver.rs  vote.rs
crates/consensus-core/src/block/: tests.rs
crates/consensus-core/src/citem/: peer_info.rs  transaction.rs  transaction_nonce.rs
crates/consensus-core/src/module/: config.rs
crates/consensus-core/src/peer_set/: tests.rs
crates/consensus-tests/: Cargo.toml
crates/consensus-tests/tests/: sanity.rs
crates/consensus/src/: consensus.rs  lib.rs  tables.rs  vote_set.rs
crates/consensus/src/consensus/: ctx.rs  finish_round.rs  generate_proposal.rs  getters.rs  handle_finality_vote.rs  handle_notarized_block.rs  handle_vote.rs  init.rs  version.rs
crates/consensus/src/vote_set/: tests.rs
crates/db/: Cargo.toml  README.md
crates/db/src/: ctx.rs  error.rs  lib.rs
crates/derive-secret/: Cargo.toml
crates/derive-secret/src/: lib.rs  tests.rs
crates/invite/: Cargo.toml
crates/invite/src/: lib.rs
crates/module/: Cargo.toml  README.md
crates/module-core/: Cargo.toml
crates/module-core/src/: effect.rs  lib.rs  module.rs
crates/module-core/src/module/: db.rs
crates/module/src/: effect.rs  kinds.rs  lib.rs  module.rs
crates/module/src/module/: config.rs  db.rs
crates/modules/app-consensus/: Cargo.toml
crates/modules/app-consensus/src/: citem.rs  effects.rs  init.rs  lib.rs  module.rs  tables.rs  tests.rs
crates/modules/consensus/: Cargo.toml
crates/modules/consensus-ctrl/: Cargo.toml  README.md
crates/modules/consensus-ctrl-effects/: Cargo.toml
crates/modules/consensus-ctrl-effects/src/: lib.rs
crates/modules/consensus-ctrl/src/: citem.rs  effects.rs  init.rs  lib.rs  module.rs  params.rs  tables.rs  tests.rs
crates/modules/consensus/src/: init.rs  lib.rs  tables.rs
crates/modules/core-consensus/: Cargo.toml
crates/modules/core-consensus/src/: citem.rs  effects.rs  init.rs  lib.rs  module.rs  params.rs  tables.rs  tests.rs
crates/modules/meta/: Cargo.toml  README.md
crates/modules/meta-effects/: Cargo.toml
crates/modules/meta-effects/src/: lib.rs
crates/modules/meta/src/: citem.rs  effects.rs  init.rs  lib.rs  module.rs  tables.rs
crates/node/: Cargo.toml  README.md
crates/node-app/: Cargo.toml
crates/node-app-core/: Cargo.toml
crates/node-app-core/src/: lib.rs
crates/node-app/src/: db.rs  init.rs  lib.rs  process_citem.rs  tables.rs
crates/node-core/: Cargo.toml
crates/node-core/src/: address.rs  lib.rs
crates/node-shared-modules/: Cargo.toml
crates/node-shared-modules/src/: lib.rs
crates/node-ui/: Cargo.toml
crates/node-ui-axum/: CONVENTIONS.md  Cargo.toml  README.md
crates/node-ui-axum/assets/: style.css
crates/node-ui-axum/src/: assets.rs  auth.rs  error.rs  fragments.rs  lib.rs  middleware.rs  misc.rs  page.rs  routes.rs
crates/node-ui-axum/src/routes/: consensus_status.rs  explorer.rs  init.rs  invite.rs  login.rs  module.rs  root.rs
crates/node-ui-axum/src/routes/module/: app_consensus.rs  consensus_ctrl.rs  core_consensus.rs  meta.rs
crates/node-ui/src/: lib.rs
crates/node/src/: app_api.rs  connection_pool.rs  derive_secret_ext.rs  envs.rs  finality_vote_query_task.rs  handle.rs  invite.rs  join.rs  lib.rs  node.rs  pass.rs  peer_address.rs  rpc.rs  rpc_server.rs  run_consensus.rs  tables.rs  ui_api.rs
crates/node/src/node/: getters.rs  init.rs
crates/util-array-type/: Cargo.toml
crates/util-array-type/src/: lib.rs
crates/util-axum/: Cargo.toml
crates/util-axum/src/: datastar.rs  lib.rs
crates/util-bincode/: Cargo.toml
crates/util-bincode/src/: lib.rs
crates/util-core/: Cargo.toml
crates/util-core/src/: lib.rs
crates/util-db/: Cargo.toml
crates/util-db/src/: lib.rs  random.rs
crates/util-error/: Cargo.toml
crates/util-error/src/: lib.rs
crates/util-fmt-opt/: Cargo.toml
crates/util-fmt-opt/src/: lib.rs
