[package]
name = "bfte-consensus-tests"

edition.workspace = true
version.workspace = true

[lints]
workspace = true


[dependencies]

[dev-dependencies]
bfte-consensus = { workspace = true }
bfte-consensus-core = { workspace = true }
bfte-db = { workspace = true }
bfte-util-error = { workspace = true }
redb-bincode = { workspace = true }
snafu = { workspace = true }
test-log = { workspace = true, features = ["trace"] }
tokio = { workspace = true }
tokio-test = { workspace = true }
tracing = { workspace = true }
