[package]
name = "bfte-consensus"

edition.workspace = true
version.workspace = true

[lints]
workspace = true


[dependencies]
bfte-consensus-core = { workspace = true }
bfte-db = { workspace = true }
bfte-util-array-type = { workspace = true }
bfte-util-bincode = { workspace = true }
bfte-util-db = { workspace = true }
bfte-util-error = { workspace = true }
bfte-util-fmt-opt = { workspace = true }
bincode = { workspace = true }
bit-set = { workspace = true }
blake3 = { workspace = true }
convi = { workspace = true }
data-encoding = { workspace = true }
derive_more = { workspace = true }
ed25519-dalek = { workspace = true }
nutype = { workspace = true }
redb-bincode = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
