[package]
name = "bfte-db"

description.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
bfte-util-array-type = { workspace = true }
bfte-util-error = { workspace = true }
redb-bincode = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tracing = { workspace = true }
