[package]
name = "bfte-module-core"

edition.workspace = true
version.workspace = true

[dependencies]
bfte-consensus-core = { workspace = true }
bfte-db = { workspace = true }
bfte-util-error = { workspace = true }
bincode = { workspace = true }
redb-bincode = { workspace = true }
snafu = { workspace = true }
