[package]
name = "bfte-node-app"

edition.workspace = true
version.workspace = true

[dependencies]
bfte-consensus = { workspace = true }
bfte-consensus-core = { workspace = true }
bfte-db = { workspace = true }
bfte-module = { workspace = true }
bfte-module-app-consensus = { workspace = true }
bfte-node-app-core = { workspace = true }
bfte-node-shared-modules = { workspace = true }
bfte-util-db = { workspace = true }
bfte-util-error = { workspace = true }
bincode = { workspace = true }
derive_more = { workspace = true, features = ["from", "into", "display"] }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
