[package]
name = "bfte-node-shared-modules"

edition.workspace = true
version.workspace = true

[dependencies]
bfte-consensus-core = { workspace = true }
bfte-module = { workspace = true }
bfte-util-error = { workspace = true }
futures = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
