[package]
name = "bfte-node-ui-axum"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-stream = { workspace = true }
axum = { workspace = true, features = ["macros"] }
bfte-node-ui = { workspace = true }
bfte-util-error = { workspace = true }
blake3 = { workspace = true }
bon = { workspace = true }
datastar = { workspace = true, features = ["axum"] }
listenfd = { workspace = true }
maud = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tower-http = { workspace = true, features = ["cors", "compression-br"] }
tower-sessions = { workspace = true }
tracing = { workspace = true }
