[package]
name = "bfte-node-ui-axum"

edition.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-stream = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
axum-extra = { workspace = true, features = ["typed-header"] }
bfte-consensus-core = { workspace = true }
bfte-invite = { workspace = true }
bfte-module = { workspace = true }
bfte-module-app-consensus = { workspace = true }
bfte-module-meta = { workspace = true }
bfte-node-shared-modules = { workspace = true }
bfte-node-ui = { workspace = true }
bfte-util-axum = { workspace = true }
bfte-util-error = { workspace = true }
blake3 = { workspace = true }
bon = { workspace = true }
datastar = { workspace = true, features = ["axum"] }
hex = { workspace = true }
listenfd = { workspace = true }
maud = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["net"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "compression-br"] }
tower-sessions = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
