[package]
name = "bfte-node-ui"

edition.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
bfte-consensus-core = { workspace = true }
bfte-invite = { workspace = true }
bfte-util-error = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
