[package]
name = "bfte-module-core-consensus"

edition.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
bfte-consensus-core = { workspace = true }
bfte-module = { workspace = true }
bfte-util-db = { workspace = true }
bfte-util-error = { workspace = true }
bincode = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
