[package]
name = "bfte-module-meta"

edition.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
bfte-consensus-core = { workspace = true }
bfte-db = { workspace = true }
bfte-module = { workspace = true }
bfte-module-consensus-ctrl = { workspace = true }
bfte-module-meta-effects = { workspace = true }
bfte-util-bincode = { workspace = true }
bfte-util-db = { workspace = true }
bfte-util-error = { workspace = true }
bincode = { workspace = true }
convi = { workspace = true, features = ["min_target_pointer_width_32"] }
serde = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
